cmake_minimum_required(VERSION 3.28)
project(cpp_prime_plus)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_prime_plus main.cpp)
add_executable(strtyp3 chapter4_3/strtype3.cpp)
add_executable(sqrt chapter2_4/sqrt.cpp)
add_executable(exceed chapter3_1/exceed.cpp)
add_executable(limits chapter3_1/limits.cpp)
