cmake_minimum_required(VERSION 3.28)
project(cpp_prime_plus)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_prime_plus main.cpp)
add_executable(strtyp3 chapter4_3/strtype3.cpp)
add_executable(sqrt chapter2_4/sqrt.cpp)
add_executable(exceed chapter3_1/exceed.cpp)
add_executable(limits chapter3_1/limits.cpp)
add_executable(mixtypes chapter4_9/mixtypes.cpp)
add_executable(cmpstr chapter5_1/compstr.cpp)
add_executable(textin3 chapter5_5/textin3.cpp)
add_executable(cctypes chapter6_3/cctypes.cpp)
add_executable(outfile chapter6_8/outfile.cpp)
add_executable(sumafile chapter6_8/sumafile.cpp)
add_executable(lotto chapter7_2/lotto.cpp)
add_executable(arrfun2 chapter7_3/arrfun2.cpp)
add_executable(strgfun chapter7_5/strgfun.cpp)
add_executable(strgback chapter7_5/strgback.cpp)
add_executable(strctptr chapter7_6/strctptr.cpp)
add_executable(arrobj chapter7_8/arrobj.cpp)
add_executable(fun_ptr chapter7_10/fun_ptr.cpp)
add_executable(sceref chapter8_2/sceref.cpp)
add_executable(swaps chapter8_2/swaps.cpp)
add_executable(strtref chapter8_2/strtref.cpp)
add_executable(left chapter8_3/left.cpp)
add_executable(generate chapter8_3/generate.cpp)
add_executable(twoswap chapter8_5/twoswap.cpp)
add_executable(support chapter9_2_4/support.cpp chapter9_2_4/external.cpp)
add_executable(twofile1 chapter9_2_5/twofile1.cpp
        chapter9_2_5/twofile2.cpp)
add_executable(static chapter9_2_6/static.cpp)
