cmake_minimum_required(VERSION 3.28)
project(cpp_prime_plus)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_prime_plus main.cpp)
add_executable(strtyp3 chapter4_3/strtype3.cpp)
add_executable(sqrt chapter2_4/sqrt.cpp)
add_executable(exceed chapter3_1/exceed.cpp)
add_executable(limits chapter3_1/limits.cpp)
add_executable(mixtypes chapter4_9/mixtypes.cpp)
add_executable(cmpstr chapter5_1/compstr.cpp)
add_executable(textin3 chapter5_5/textin3.cpp)
add_executable(cctypes chapter6_3/cctypes.cpp)
add_executable(outfile chapter6_8/outfile.cpp)
add_executable(sumafile chapter6_8/sumafile.cpp)
add_executable(lotto chapter7_2/lotto.cpp)
add_executable(arrfun2 chapter7_3/arrfun2.cpp)
add_executable(strgfun chapter7_5/strgfun.cpp)
add_executable(strgback chapter7_5/strgback.cpp)
add_executable(strctptr chapter7_6/strctptr.cpp)
add_executable(arrobj chapter7_8/arrobj.cpp)
add_executable(fun_ptr chapter7_10/fun_ptr.cpp)
add_executable(sceref chapter8_2/sceref.cpp)
add_executable(swaps chapter8_2/swaps.cpp)
add_executable(strtref chapter8_2/strtref.cpp)
add_executable(left chapter8_3/left.cpp)
add_executable(generate chapter8_3/generate.cpp)
add_executable(twoswap chapter8_5/twoswap.cpp)
add_executable(support chapter9_2_4/support.cpp chapter9_2_4/external.cpp)
add_executable(twofile1 chapter9_2_5/twofile1.cpp
        chapter9_2_5/twofile2.cpp)
add_executable(static chapter9_2_6/static.cpp)
add_executable(namesp chapter9_3/namesp.h
        chapter9_3/namesp.cpp
        chapter9_3/usenmsp.cpp)
add_executable(stock00 chapter10_2/stock00.h
        chapter10_2/stock00.cpp
        chapter10_2/usestock00.cpp)
add_executable(stock10 chapter10_3/stock10.h
        chapter10_3/stock10.cpp
        chapter10_3/usestock10.cpp)
add_executable(stack chapter10_7/Stack.h
        chapter10_7/Stack.cpp
        chapter10_7/stacker.cpp)
add_executable(mytime chapter11_2/mytime.h
        chapter11_2/mytime.cpp
        chapter11_2/usetime.cpp)
add_executable(mytime3 chapter11_3/mytime3.h
        chapter11_3/mytime3.cpp
        chapter11_3/usemytime3.cpp)
add_executable(vector chapter11_5/vector.cpp chapter11_5/vector.h
        chapter11_5/randwalk.cpp)
add_executable(string1 chapter12_2/string1.cpp chapter12_2/string1.h)
add_executable(placenew chapter12_5/placenew.cpp)
add_executable(Queue chapter12_6/Queue.cpp chapter12_6/Queue.h)
add_executable(tabtenn1 chapter13_1/tabtenn1.cpp chapter13_1/tabtenn1.h)
